# stack-overflow

./: pyproject.toml
python/: list_removal.py
